Issue #2130783 by johnv: Added formatter 'count entities with this state' to 'Workflow: state' Views Field.
Issue #2019345 by johnv: Added workflow_get_wid_label().
Issue #2019345 by johnv: Fixed workflow_get_states() in workflow_admin_ui.
Issue #1589254 by fedia.io1: Fixed Rename D6 hook_features_export_rebuild() to D7 hook_features_rebuild().
Issue #2019345 by johnv: Renamed Workflow->getOptions() to workflow_get_state_names().
Issue #2019345 by johnv: Fixed workflow.features.inc helper functions.
Issue #2124915 by fedia.io1, Liam Mitchell: Fixed Transition's target_state and roles aren't exported with features.
Issue #2126867 by slite: Fixed Reverting features causes warning.
Issue #2147781 by zihong0: Fixed error, due to typo in workflow_acces.module.
Issue #2144817 by zihong0: Fixed PHP 5.3/5.4 'Warning: Parameter 1' in workflow_transition_form().
Issue #2019345 by johnv: Renamed Workflow*->get*ByName() to Workflow*->loadByName().
Issue #2124915 by johnv: Fixed transfer transitions with Features.
Issue #2148851 by johnv: Fixed transfer 'tab_roles' using machine names with Features.
Issue #2148851 by brad.bulger, johnv: Fixed warning in Tokens when an old_state is deleted.

Since 7.x-2.0-beta2
Issue #2149027 by johnv: Fixed warning in workflow.rules.inc for PHP5.3/PHP5.4.
Issue #2149121 by johnv: Restructured workflow_views_views_data().
Issue #2149223 by johnv: Moved calls to Transition->isAllowed() into Transition->execute(), removing duplicate code.
Issue #2149451 by hckurniawan: Fixed PHP Warnings in Drupal's core install.inc in distribution.
Issue #2124429 by johnv: Removed obsolete code comment in workflow_revert.
Issue #2019345 by johnv: Removed obsolete code comment in Workflow* classes.
Issue #2149595 by johnv: Fixed Scheduled transitions are invisible, after upgrade to 7.x-2.0-beta2.
Issue #2149671 by johnv: Added dependency on Workflow Node for workflow_search_api.